# Portal-File-Downloader

./: .gitignore  README.md  main.py  pyproject.toml
api/: main.py  pyproject.toml
extension/: manifest.json  popup.html  popup.js
