[tool.poetry]
name = "portal-file-downloader-api"
version = "0.1.0"
description = "Python API to automate file downloads via Playwright."
authors = ["Your Name <your@email.com>"]
license = "MIT"
package-mode = false  # <-- ADDED THIS LINE

[tool.poetry.dependencies]
python = ">=3.8"
playwright = "*"
flask = "^3.0.0"      # Added Flask
flask-cors = "^4.0.0" # Added Flask-CORS for the extension

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

